# plasma6-applet-appgrid

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Messages.sh  PKGBUILD  README.md  REUSE.toml  cliff.toml  dev.xarbit.appgrid.kglobalaccel.desktop  dev.xarbit.appgrid.metainfo.xml  flake.nix  messages.mo  metadata-panel.json.in  metadata.json.in
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: build.yml  notify-website.yml  publish.yml  release.yml
docs/: freedesktop.md  search-pipeline.md
package/: metadata.json
package-panel/: metadata.json
package-panel/contents/config/: main.xml
package-panel/contents/ui/: AppContextMenu.qml  AppGridView.qml  AppIconDelegate.qml  CategoryBar.qml  CategoryGridView.qml  CompactRepresentation.qml  ConfigGeneral.qml  GridPanel.qml  PowerButtons.qml  main.qml
package-panel/contents/ui/prefix/: PrefixCommandView.qml  PrefixFileBrowser.qml  PrefixHelpView.qml  PrefixHiddenView.qml  PrefixInfoView.qml
package/contents/config/: config.qml  main.xml
package/contents/ui/: AppContextMenu.qml  AppGridView.qml  AppIconDelegate.qml  CategoryBar.qml  CategoryGridView.qml  CompactRepresentation.qml  ConfigAnimations.qml  ConfigAppearance.qml  ConfigGeneral.qml  ConfigHiddenApps.qml  ConfigSearch.qml  ConfigSession.qml  DragSource.qml  EdgeAutoScroller.qml  FavoritesReorderArea.qml  FavoritesTabDragHover.qml  GridHighlight.qml  GridPanel.qml  GridWindow.qml  OverlayScrollBar.qml  PowerButtons.qml  PowerButtonsConfig.qml  PrefixModeView.qml  RecentAppsHeader.qml  ScrollableColumn.qml  SearchBar.qml  SearchResultsList.qml  SelectionState.qml  ShadowedIcon.qml  main.qml
package/contents/ui/animations/: AnimationBase.qml  BuzzAnimation.qml  FadeAnimation.qml  GlideAnimation.qml  GrowUpAnimation.qml  NoneAnimation.qml  PopAnimation.qml  ScaleAnimation.qml  SlamAnimation.qml  SlideAnimation.qml  SlideDownAnimation.qml  SlideUpAnimation.qml  TwistAnimation.qml
package/contents/ui/config/: ConfigAppearance.qml  (+14 more)
package/standalone/: ConfigWindow.qml  main.qml
package/variants/center/: CompactRepresentation.qml  main.qml
package/variants/panel/: CompactRepresentation.qml  main.qml
packaging/aur/: PKGBUILD-git.in  PKGBUILD-rc.in  PKGBUILD.in  plasma6-applets-appgrid.install
packaging/deb/debian/: control  postinst  rules
packaging/extras/: README.md  appgrid-restart-plasma.path  appgrid-restart-plasma.service
packaging/nix/: README.md  package.nix
packaging/rpm/: appgrid.spec.in
packaging/universal/: INSTALL.TXT  build-package.sh  distros.toml  install.py  install.sh  uninstall.py
po/: dev.xarbit.appgrid.pot
po/bg/: dev.xarbit.appgrid.po
po/bs/: dev.xarbit.appgrid.po
po/cs/: dev.xarbit.appgrid.po
po/da/: dev.xarbit.appgrid.po
po/de/: dev.xarbit.appgrid.po
po/el/: dev.xarbit.appgrid.po
po/es/: dev.xarbit.appgrid.po
po/et/: dev.xarbit.appgrid.po
po/fi/: dev.xarbit.appgrid.po
po/fr/: dev.xarbit.appgrid.po
po/ga/: dev.xarbit.appgrid.po
po/hr/: dev.xarbit.appgrid.po
po/hu/: dev.xarbit.appgrid.po
po/it/: dev.xarbit.appgrid.po
po/lt/: dev.xarbit.appgrid.po
po/lv/: dev.xarbit.appgrid.po
po/mk/: dev.xarbit.appgrid.po
po/nb/: dev.xarbit.appgrid.po
po/nl/: dev.xarbit.appgrid.po
po/pl/: dev.xarbit.appgrid.po
po/pt/: dev.xarbit.appgrid.po
po/ro/: dev.xarbit.appgrid.po
po/ru/: dev.xarbit.appgrid.po
po/sk/: dev.xarbit.appgrid.po
po/sl/: dev.xarbit.appgrid.po
po/sq/: dev.xarbit.appgrid.po
po/sr/: dev.xarbit.appgrid.po
po/sv/: dev.xarbit.appgrid.po
po/tr/: dev.xarbit.appgrid.po
po/uk/: dev.xarbit.appgrid.po
po/zh_TW/: dev.xarbit.appgrid.po
scripts/: changelog.sh  install-hooks.sh  release.sh
src/: abstractgroupedmodel.cpp  abstractgroupedmodel.h  appfiltermodel.cpp  appfiltermodel.h  appgridcontroller.cpp  appgridcontroller.h  appgridfavoritesmodel.cpp  appgridfavoritesmodel.h  appgridpanelplugin.cpp  appgridpanelplugin.h  appgridplugin.cpp  appgridplugin.h  appmodel.cpp  appmodel.h  appmodelassembly.cpp  appmodelassembly.h  appstreamresolver.cpp  appstreamresolver.h  categorymapping.cpp  categorymapping.h  defaultappsresolver.cpp  defaultappsresolver.h  discoverbackends.cpp  discoverbackends.h  favoritesfolderlogic.cpp  favoritesfolderlogic.h  favoritesgroupedmodel.cpp  favoritesgroupedmodel.h  frecencyprovider.cpp  frecencyscoring.cpp  frecencyscoring.h  keyvaluelist.h  launchbookkeeping.cpp  launchbookkeeping.h  launchstatestore.cpp  launchstatestore.h  menuscanner.cpp  menuscanner.h  menutree.cpp  menutree.h  (+20 more)
src/standalone/: appgridstandalone.cpp  appgridstandalone.h  main.cpp
src/tests/: CMakeLists.txt  appmodeltest.cpp
tests/: CMakeLists.txt  test_appfiltermodel.cpp  test_appmodel.cpp  test_appmodel_assembly.cpp  test_appmodel_helpers.cpp  test_category_mapping.cpp  test_discoverbackends.cpp  test_favoritesgroupedmodel.cpp  test_filter.cpp  test_frecency_scoring.cpp  test_launchbookkeeping.cpp  test_launchstatestore.cpp  test_menutree.cpp  test_newappstracker.cpp  test_pluginhelpers.cpp  test_runner_filter.cpp  test_search_ranking.cpp  test_sort.cpp  test_unified_search.cpp  test_updatechecker.cpp
tests/qml/: VisibilityState.qml  WheelGraceGate.qml  categorybardisplay.js  categoryscroll.js  constants.js  customheaderactions.js  favoritesmigration.js  favoritetoggle.js  gridmetrics.js  headeractions.js  launchcounts.js  panelgeometry.js  scrolleasing.js  sysinfoformat.js  tst_CategoryBarDisplay.qml  tst_CategoryFlatten.qml  tst_CategoryScroll.qml  tst_ConfigBuffer.qml  tst_CustomHeaderActions.qml  tst_DevicePixels.qml  tst_FavoriteToggle.qml  tst_FavoritesMigration.qml  tst_GridMetrics.qml  tst_GridNav.qml  tst_GridPanel.qml  tst_HeaderActions.qml  tst_HoverActivation.qml  tst_LaunchCounts.qml  tst_Migrations.qml  tst_MnemonicResolver.qml  tst_PanelGeometry.qml  tst_PrefixDetector.qml  tst_PrefixModes.qml  tst_Scale.qml  tst_ScrollEasing.qml  tst_SearchResultNav.qml  tst_SearchSessionManager.qml  tst_SelectionState.qml  tst_SysInfoFormat.qml  tst_ThemeColors.qml  (+2 more)
(+74 files in other folders)
